# pulsar-producer

./: README  README.md  pyproject.toml
examples/: message-file  pulsar-connection.json
pulsar_producer/: __init__.py  cli.py  producer.py
